tests/cases_invalid/var_defs/invalid_idents/.expected
error: expected identifier
 --> ./cases_invalid/var_defs/invalid_idents/main.shd:2:9
  |
2 |     var ref = 0;
  |         ^ here
  |
